# dart_get_map_version

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
lib/: dart_get_map_version.dart  dart_get_map_version_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  dart_get_map_version.c  dart_get_map_version.cpp  dart_get_map_version.h
